--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
+    "install": "node install.js",
     "start": "nodemon server.js"
   },
   "keywords": [],
@@ -15,6 +16,6 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "mysql": "^2.18.1"
+    "sqlite3": "^5.1.7"
   }
 }
